# diffxl

./: LICENSE.txt  README.md  requirements.txt  setup.cfg
src/diffxl/: __init__.py  outformat.py
