[metadata]
name = diffxl
version = 0.0.0
license = MIT
description = Difference checker of excel spreadsheets
long_description = file: README.md
author = Anton Shevchuk
author_email = ashevchuk22@gmail.com

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    openpyxl
    colorama

[options.packages.find]
where=src